--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Curso Alura</title>
+        <title>lista de Cursos de devOps Alura</title>
     </head>
     <body>
         <ul>
