--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <ul>
-            <li>Vagrant gerenciando maquinas virtuales</li>
+            <li>Vagrant</li>
             <li>Docker: Creando containers sin dolor de cabeza</li>
-            <li>Ansible: infraestructura como código</li>
+            <li>Ansible:Su infraestructuraa como codigo</li>
             <li>Integración Continua: Madurez y Productividad en el desarrollo de software</li>
             <li>Kubernetes: Introduccion a la orquestacion de containers</li>
         </ul>
